--- a/src/styles/base/_app.scss
+++ b/src/styles/base/_app.scss
@@ -1,7 +1,77 @@
 
-
-label {
-	font:$label-font;
-    color:$label-color;
+html {
+	font-size: 13px; 
+	font-family:$font-family
+	
+	}
+  
+  body {
+	font-weight: 400;
+	font-size: 1rem;
+	font-family: $font-family;
+	line-height: 1.6;
+	color: #555;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-rendering: optimizelegibility;
+	// we will change when we need
+	// background-color: white; 
+	// background-image: url("../../public/images/background.jpg");
+    }
+    
+    
+.mt-5{
+	margin-top:$mt-5!important;
 }
 
+.mt-6{
+	margin-top:$mt-6!important;
+}
+.pt-5 {
+	padding-top: 20px!important;
+
+}
+.pt-6 {
+	padding-top: 50px!important;
+
+}
+
+.pt-7 {
+	padding-top: 70px!important;
+
+}
+
+// card
+.card {
+	box-shadow: $box-shadow;
+	border-left-color:$fa-color1;  
+	border-left-width: .3rem;  
+	border-radius: 9px;
+}
+
+.card-header {
+	background-image: $background-image;
+	
+}
+
+// for fontownsome
+
+.fa-refresh.fa-spin{
+	color:$fa-color2;	
+}
+
+.fa-check-square-o{
+	color:$fa-color1;
+}
+
+.fa.fa-forward{
+	color:$fa-color1;
+}
+
+.fa.fa-lock{
+	color:$fa-color1
+}
+
+hr { margin: 5px 0 5px 0; }
+
+.top-buffer { margin-top:10px; }
