--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -15,6 +15,7 @@ $border-bottom-animation:#F89406;
 
 $fa-color1:#F89406;
 $fa-color2:red;
+$fa-color3:rgb(20, 37, 189);
 
 $background-color1:transparent;
 $mt-4: 3.5rem;
