--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,5 +2,5 @@
 @import "~@spillay/formmanager/dist/css/formmanager.css";  // this is from Parent ( formmanager )
 
 // child : if you want override
-@import './base/settings';
-@import './base/app';
+@import './settings';
+@import './loginview';
